--- a/FLS.CoffeeDesk/Views/CatalogContent/Index.cshtml
+++ b/FLS.CoffeeDesk/Views/CatalogContent/Index.cshtml
@@ -10,7 +10,7 @@
     <header class="row" style="justify-content: left">
         <div style="flex: 1"></div>
         <div style="flex: 8">
-            <h1>@Model.Catalog.Name</h1>
+            <h1>@Html.DisplayFor(m => m.Catalog.Name)</h1>
         </div>
         <div style="flex: 1"></div>
         <div></div>
